package org.example.models;

public enum CallType {
  LOCAL,
  NATIONAL,
  INTERNATIONAL
}
